--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,3 +1,22 @@
 <p>
-  home works!
+  <img src="http://rawgit.com/start-angular/SB-Admin-BS4-Angular-4/master/dist/assets/images/slider1.jpg">
 </p>
+
+
+    <div class="jumbotron">
+        <h1>Hello, can not paying customer!</h1>
+        <p>
+
+            You can not pay the bills! Here is your help.
+
+        </p>
+        <p>
+          
+          <a [routerLink]="['/calculator']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" role="button" >
+            Get started
+        </a>
+
+ 
+        </p>
+
+    </div>
