--- a/src/app/layout/calculator/term/term.component.html
+++ b/src/app/layout/calculator/term/term.component.html
@@ -8,7 +8,7 @@
           <input type="radio" name="term" id="optionsRadiosInline" value="long" (click)="saveTerm($event)"/>Long
       </label>
 
-      <a [routerLink]="['/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" role="button" >
+      <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" role="button" >
             Next
         </a>
   </fieldset>
