--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,22 +1,21 @@
-<p>
-  <img src="http://rawgit.com/start-angular/SB-Admin-BS4-Angular-4/master/dist/assets/images/slider1.jpg">
-</p>
 
+    <div class="center">
+        <h1>Life can be pretty <br />unpredictable</h1>
+        <div style="width: 400px; ">
+Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro, veri perpetua his no. Ius aliquid honestatis necessitatibus ad. Vide commodo inimicus ex qui. Sed eu modo habemus molestie, pri ei tale laoreet.
+<br/> <br/>
+Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero sapientem mei ad, ne sumo lobortis quo, augue labores omnesque cu vim. Everti complectitur his ad. In diceret fuisset est. Ut usu lobortis laboramus voluptaria. Vis eu liber debitis deterruisset.
 
-    <div class="jumbotron">
-        <h1>Hello, can not paying customer!</h1>
-        <p>
+        </div>
+        
+          <br/> <br/>
 
-            You can not pay the bills! Here is your help.
-
-        </p>
-        <p>
           
           <a [routerLink]="['/calculator']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" role="button" >
             Get started
         </a>
 
  
-        </p>
+        
 
     </div>
