--- a/src/app/layout/calculator/location/location.component.html
+++ b/src/app/layout/calculator/location/location.component.html
@@ -2,7 +2,8 @@
   What is your location
   <input type="text" [(ngModel)]="postcode" required />
 
-   <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" role="button" (click)="saveLocation()" >
+   <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" 
+        role="button" (click)="saveLocation()" >
         Next
     </a>
     
