--- a/src/app/layout/calculator/location/location.component.html
+++ b/src/app/layout/calculator/location/location.component.html
@@ -1,10 +1,24 @@
-<p>
-  What is your location
+ 
+      <h1>
+          Which suburb is your <br/> household in?
+      </h1>
+
+<br/><br/>
+
+      <div style="width: 400px;">
+Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro.
+      </div>
+<br/><br/>
+
+
   <input type="text" [(ngModel)]="postcode" required />
+
+<br/><br/>
+
 
    <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" 
         role="button" (click)="saveLocation()" >
         Next
     </a>
     
-</p>
+ 
