--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,7 +9,7 @@
     background-image: url('../assets/images/agl-background.png');
 }
 
-p, div
+div, p, label, h1, h2
 {
    color: #fff !important;
 }
