--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,9 +1,3 @@
-<div class="pos-f-t fixed-top header">
-    <nav class="navbar navbar-inverse bg-inverse navbar-toggleable-md">
-        <button class="navbar-toggler navbar-toggler-right" (click)="toggleSidebar()">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="javascript:void(0)">I CAN'T PAY BILLS</a>
-        
-    </nav>
+<div class="pos-f-t fixed-top header bgimg">
+    <img src="../../assets/images/logo.png" width="100px;" height="100px;" />
 </div>
