UI and expense component added

--- a/src/app/layout/calculator/location/location.component.html
+++ b/src/app/layout/calculator/location/location.component.html
@@ -16,9 +16,9 @@ Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria defin
 <br/><br/>
 
 
-   <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" 
+   <a [routerLink]="['/calculator/income']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block" 
         role="button" (click)="saveLocation()" >
-        Next
+        NEXT STEP
     </a>
     
  
