--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -12,8 +12,8 @@ Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero
           <br/> <br/>
 
 
-          <a [routerLink]="['/calculator']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" role="button" >
-            Get started
+          <a [routerLink]="['/calculator']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block" role="button" >
+            GET BACK ON TRACK
         </a>
 
  
