--- a/src/app/layout/calculator/term/term.component.html
+++ b/src/app/layout/calculator/term/term.component.html
@@ -22,8 +22,8 @@ Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria defin
 <br/><br/>
 
 
-      <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg" role="button" >
-            Next
+      <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block" role="button" >
+            NEXT STEP
         </a>
   </fieldset>
  
