--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,3 @@
 <div class="pos-f-t fixed-top header bgimg">
-    <img src="../../assets/images/logo.png" width="100px;" height="100px;" />
+    <img src="../../assets/images/AGL_logo_rev.png" style="padding:10px;"/>
 </div>
