--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,7 +9,7 @@
     background-image: url('../assets/images/agl-background.png');
 }
 
-div, p, label, h1, h2
+div, p, label, h1, h2, span
 {
    color: #fff !important;
 }
