side bar get going

--- a/src/app/layout/dashboard/components/notification/notification.component.html
+++ b/src/app/layout/dashboard/components/notification/notification.component.html
@@ -1,6 +1,16 @@
-<div class="card-block">
+<div class="">
     <div class="list-group">
+
         <a href="#" class="list-group-item clearfix d-block">
+            <i class="fa"></i> Welcome to AGL on track
+        </a>
+
+        <a href="#" class="list-group-item clearfix d-block">
+            <i class="fa"></i> Your situation
+        </a>
+
+
+        <!--<a href="#" class="list-group-item clearfix d-block">
             <i class="fa fa-comment fa-fw"></i> New Comment
             <span class="float-right text-muted small"><em>4 minutes ago</em></span>
         </a>
@@ -35,7 +45,7 @@
         <a href="#" class="list-group-item clearfix d-block">
             <i class="fa fa-money fa-fw"></i> Payment Received
             <span class="float-right text-muted small"><em>Yesterday</em></span>
-        </a>
+        </a>-->
     </div>
     <!-- /.list-group -->
     <a href="#" class="btn btn-default btn-block">View All Alerts</a>
