--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,9 +1,9 @@
 
-    <div class="center">
+    <div>
         <h1>Life can be pretty <br />unpredictable</h1>
         <br/><br/>
 
-        <div style="width: 400px; ">
+        <div >
 Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro, veri perpetua his no. <br/> <br/>
 Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero sapientem mei ad, ne sumo lobortis quo, augue labores omnesque cu vim. Everti complectitur his ad. In diceret fuisset est. Ut usu lobortis laboramus voluptaria. Vis eu liber debitis deterruisset.
 
