--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,29 @@
 <app-header></app-header>
 <!--<app-sidebar></app-sidebar>-->
-<section class="center-container">
-    <router-outlet></router-outlet>
-</section>
+
+
+<div class="center-container">
+
+    <div class="row">
+
+        <div class="col-sm-3"> &nbsp; </div>
+
+        <div class="col-sm-4">
+            
+                <router-outlet></router-outlet>
+            
+        </div>
+
+        <div class="col-sm-3"> &nbsp; </div>
+
+
+        <div class="col-sm-2">
+            <app-notification></app-notification>
+        </div>
+       
+
+    </div>
+</div>
+
+
+
