--- a/src/app/layout/dashboard/components/notification/notification.component.html
+++ b/src/app/layout/dashboard/components/notification/notification.component.html
@@ -1,5 +1,27 @@
-<div class="">
-    <div class="list-group">
+<div class="statusbar">
+    <div class="statusbar__item back"><div class="v-center">Back to agl.com</div></div>
+    <div class="statusbar__item">
+        <div class="statusbar__item-text v-center">Welcome to AGL on track</div>
+    </div>
+    <div class="statusbar__item">
+        <div class="statusbar__item-text v-center">Your situation</div>
+    </div>
+    <div class="statusbar__item">
+        <div class="statusbar__item-text v-center">Household location</div>
+    </div>
+    <div class="statusbar__item">
+        <div class="statusbar__item-text v-center">Household Income</div>
+    </div>
+    <div class="statusbar__item">
+        <div class="statusbar__item-text v-center">Household expenses</div>
+    </div>
+    <div class="statusbar__item">
+        <div class="statusbar__item-text v-center">Concessions</div>
+    </div>
+    <div class="statusbar__item">
+        <div class="statusbar__item-text v-center">Your action plans</div>
+    </div>
+    <!-- <div class="list-group">
 
         <a href="#" class="list-group-item clearfix d-block">
             <i class="fa"></i> Welcome to AGL on track
@@ -7,7 +29,7 @@
 
         <a href="#" class="list-group-item clearfix d-block">
             <i class="fa"></i> Your situation
-        </a>
+        </a> -->
 
 
         <!--<a href="#" class="list-group-item clearfix d-block">
@@ -46,7 +68,7 @@
             <i class="fa fa-money fa-fw"></i> Payment Received
             <span class="float-right text-muted small"><em>Yesterday</em></span>
         </a>-->
-    </div>
+    <!-- </div> -->
     <!-- /.list-group -->
-    <a href="#" class="btn btn-default btn-block">View All Alerts</a>
+    <!-- <a href="#" class="btn btn-default btn-block">View All Alerts</a> -->
 </div>
