Status bar indicator

--- a/src/app/layout/dashboard/components/notification/notification.component.html
+++ b/src/app/layout/dashboard/components/notification/notification.component.html
@@ -1,24 +1,31 @@
 <div class="statusbar">
     <div class="statusbar__item back"><div class="v-center">Back to agl.com</div></div>
-    <div class="statusbar__item">
+    <div class="statusbar__item active">
+        <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Welcome to AGL on track</div>
     </div>
     <div class="statusbar__item">
+        <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Your situation</div>
     </div>
     <div class="statusbar__item">
+        <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Household location</div>
     </div>
     <div class="statusbar__item">
+        <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Household Income</div>
     </div>
     <div class="statusbar__item">
+        <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Household expenses</div>
     </div>
     <div class="statusbar__item">
+        <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Concessions</div>
     </div>
     <div class="statusbar__item">
+        <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Your action plans</div>
     </div>
     <!-- <div class="list-group">
