--- a/src/app/layout/dashboard/components/notification/notification.component.html
+++ b/src/app/layout/dashboard/components/notification/notification.component.html
@@ -16,7 +16,7 @@
         <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Household Income</div>
     </div>
-    <div class="statusbar__item" [class.active]="this.dataService.statusBar.expense">
+    <div class="statusbar__item" [class.active]="this.dataService.statusBar.expenses">
         <div class="statusbar__item-progress"></div>
         <div class="statusbar__item-text v-center">Household expenses</div>
     </div>
