--- a/src/app/layout/calculator/expense/expense.component.html
+++ b/src/app/layout/calculator/expense/expense.component.html
@@ -1,41 +1,33 @@
- 
-      <h1>
-          ... and your estimated <br/> expenses?
-      </h1>
+<div>
+    <h1>... and your estimated <br/> expenses?</h1>
+    <br/><br/>
 
-<br/><br/>
+    <div>
+        Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro, veri perpetua his no. <br/>        <br/> Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero sapientem mei ad, ne sumo
+        lobortis quo, augue labores omnesque cu vim. Everti complectitur his ad. In diceret fuisset est. Ut usu lobortis
+        laboramus voluptaria. Vis eu liber debitis deterruisset.
 
-      <div style="width: 400px;">
-Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro.
-      </div>
-<br/><br/>
+    </div>
 
-      <label class="radio-inline">
+    <label class="radio-inline">
           <input type="radio" name="period" value="weekly" checked="" (click)="savePeriod($event)" />  &nbsp; Weekly
-      </label>
-      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <label class="radio-inline">
+      </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    <label class="radio-inline">
           <input type="radio" name="period" value="monthly" (click)="savePeriod($event)"/>  &nbsp; Monthly
-      </label>
-
-      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <label class="radio-inline">
+      </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    <label class="radio-inline">
           <input type="radio" name="period" value="yearly" (click)="savePeriod($event)"/>  &nbsp; Yearly
       </label>
 
-<br/><br/>
+    <span>Between $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <input type="text" [(ngModel)]="expensefrom" required />
 
-  <span>Between $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
-  <input type="text" [(ngModel)]="expensefrom" required />
+    <span>&nbsp;&nbsp; and $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <input type="text" [(ngModel)]="expenseto" required />
 
-  <span>&nbsp;&nbsp; and $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
-  <input type="text" [(ngModel)]="expenseto" required />
-
-<br/><br/>
-
-
-   <a [routerLink]="['/calculator/concession']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block" 
-        role="button" (click)="saveExpense()" >
+    <a [routerLink]="['/calculator/concession']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block"
+    role="button" (click)="saveExpense()">
         NEXT STEP
     </a>
-    
+
+</div>
