slider for term

--- a/src/app/layout/calculator/term/term.component.html
+++ b/src/app/layout/calculator/term/term.component.html
@@ -1,29 +1,38 @@
 <div>
 
-    <h1>How would you rate <br/> you situation?</h1>
+    <h1>How would you rate you situation?</h1>
     <br/><br/>
 
-<md-slider min="1" max="5" step="0.5" value="1.5"></md-slider>
+
+
 
     <div>
         Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro, veri perpetua his no. <br/>        <br/> Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero sapientem mei ad, ne sumo
-        lobortis quo, augue labores omnesque cu vim. Everti complectitur his ad. In diceret fuisset est. Ut usu lobortis
-        laboramus voluptaria. Vis eu liber debitis deterruisset.
+        lobortis quo, augue labores omnesque cu vim. 
 
     </div>
 
-    <label class="radio-inline">
-          <input type="radio" name="term" id="optionsRadiosInline" value="short" checked="" (click)="saveTerm($event)" />  &nbsp; Short
-      </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    <label class="radio-inline">
-          <input type="radio" name="term" id="optionsRadiosInline" value="long" (click)="saveTerm($event)"/>  &nbsp; Long
-      </label>
+    <br/><br/>
 
+    <div class="row">
+        <div class="col-9">Short term</div>
+        <div class="col-3">Long term</div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <md-slider style="width:100%" min="1" max="2" step="1" value="1" [(ngModel)]="range" [thumb-label]="thumblabel">
+
+            </md-slider>
+        </div>
+
+    </div>
 
     <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block"
-        role="button">
+        role="button" (click)="saveTerm()">
             NEXT STEP
         </a>
- 
+
 
 </div>
