text change home page

--- a/src/app/layout/calculator/term/term.component.html
+++ b/src/app/layout/calculator/term/term.component.html
@@ -1,15 +1,17 @@
 <div>
 
-    <h1>How would you rate you situation?</h1>
+    <div>
+        To help me find the right options for you, I’ll ask you a few questions. 
+You can choose to be completely anonymous, however to avail AGL assistance you will need to identify yourself as an AGL Customer.
+    </div>
+    
     <br/><br/>
 
 
 
 
     <div>
-        Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro, veri perpetua his no. <br/>        <br/> Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero sapientem mei ad, ne sumo
-        lobortis quo, augue labores omnesque cu vim. 
-
+        When do you think your situation will change to be able to pay your bills regularly?
     </div>
 
     <br/><br/>
@@ -28,6 +30,14 @@
         </div>
 
     </div>
+
+    <div class="row">
+        <div class="col-4">1 month</div>
+        <div class="col-5">6 months</div>
+        <div class="col-3">> 1 year</div>
+    </div>
+
+<br/><br/>
 
     <a [routerLink]="['/calculator/location']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block"
         role="button" (click)="saveTerm()">
