--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,19 +1,28 @@
 
     <div>
-        <h1>Life can be pretty <br />unpredictable</h1>
-        <br/><br/>
+        <h1>Life can be unpredictable sometimes</h1>
+        <br/>
 
         <div >
-Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro, veri perpetua his no. <br/> <br/>
-Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero sapientem mei ad, ne sumo lobortis quo, augue labores omnesque cu vim. Everti complectitur his ad. In diceret fuisset est. Ut usu lobortis laboramus voluptaria. Vis eu liber debitis deterruisset.
+
+            If you are having troubles with paying your energy bills on time, this free service will help you to
+            <br/><br/>
+            <ul>
+                <li>Assess your current situation
+                </li>
+                <li>Provide you with all your options 
+                </li>
+                <li>Give you tips to improve your situation in the short term and long term
+                </li>
+            </ul>
 
         </div>
         
-          <br/> <br/>
+          <br/> 
 
 
           <a [routerLink]="['/calculator']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block" role="button" >
-            GET BACK ON TRACK
+            Ask Jane now
         </a>
 
  
