--- a/src/app/layout/calculator/expense/expense.component.html
+++ b/src/app/layout/calculator/expense/expense.component.html
@@ -3,21 +3,20 @@
     <br/><br/>
 
     <div>
-        Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro, veri perpetua his no. <br/>        <br/> Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero sapientem mei ad, ne sumo
-        lobortis quo, augue labores omnesque cu vim. Everti complectitur his ad. In diceret fuisset est. Ut usu lobortis
-        laboramus voluptaria. Vis eu liber debitis deterruisset.
+         <h3><p class="text-center">Frequency</p></h3>
+
+        <label class="radio-inline">
+            <input type="radio" name="period" value="weekly" checked="" (click)="savePeriod($event)" />  &nbsp; Weekly
+        </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <label class="radio-inline">
+            <input type="radio" name="period" value="monthly" (click)="savePeriod($event)"/>  &nbsp; Monthly
+        </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <label class="radio-inline">
+            <input type="radio" name="period" value="yearly" (click)="savePeriod($event)"/>  &nbsp; Yearly
+        </label>
 
     </div>
 
-    <label class="radio-inline">
-          <input type="radio" name="period" value="weekly" checked="" (click)="savePeriod($event)" />  &nbsp; Weekly
-      </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    <label class="radio-inline">
-          <input type="radio" name="period" value="monthly" (click)="savePeriod($event)"/>  &nbsp; Monthly
-      </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    <label class="radio-inline">
-          <input type="radio" name="period" value="yearly" (click)="savePeriod($event)"/>  &nbsp; Yearly
-      </label>
 
     <!-- <span>Between $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
     <input type="text" [(ngModel)]="expensefrom" required />
