--- a/src/app/layout/calculator/income/income.component.html
+++ b/src/app/layout/calculator/income/income.component.html
@@ -1,19 +1,27 @@
 <div>
-    <h1>What's the total income for <br/> your household?</h1>
+    <h1>What's the total income for your household?</h1>
     <br/><br/>
 
-    <div>
-        Lorem ipsum dolor sit amet, mel ullum petentium et, at sensibus voluptaria definiebas pro, veri perpetua his no. <br/>        <br/> Vix ea aeterno ponderum repudiandae, te has mediocrem ullamcorper. Munere cetero sapientem mei ad, ne sumo
+<div>
+        
+        
+        <h3><p class="text-center">Frequency</p></h3>
+
+
+        <label class="radio-inline">
+          <input type="radio" name="period" value="weekly" checked="" (click)="savePeriod($event)" />  &nbsp; Weekly
+      </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <label class="radio-inline">
+          <input type="radio" name="period" value="monthly" (click)="savePeriod($event)"/>  &nbsp; Monthly
+      </label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <label class="radio-inline">
+          <input type="radio" name="period" value="yearly" (click)="savePeriod($event)"/>  &nbsp; Yearly
+      </label>
 
 
     </div>
 
-    <!-- <span>Between $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <input type="text" [(ngModel)]="incomefrom" required />
-
-    <span>&nbsp;&nbsp; and $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <input type="text" [(ngModel)]="incometo" required /> -->
-
+<br/>
 
     <div class="row">
         <div class="col-9">Between</div>
@@ -38,6 +46,9 @@
         </div>
 
     </div>
+    
+    <br/>
+
     <a [routerLink]="['/calculator/expense']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block"
         role="button" (click)="saveIncome()">
         NEXT STEP
