--- a/src/app/layout/calculator/expense/expense.component.html
+++ b/src/app/layout/calculator/expense/expense.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>... and your estimated <br/> expenses?</h1>
+    <h1>... and your estimated expenses?</h1>
     <br/><br/>
 
     <div>
@@ -17,12 +17,6 @@
 
     </div>
 
-
-    <!-- <span>Between $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <input type="text" [(ngModel)]="expensefrom" required />
-
-    <span>&nbsp;&nbsp; and $ &nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <input type="text" [(ngModel)]="expenseto" required /> -->
 
 
     <div class="row">
