--- a/src/app/layout/calculator/concession/concession.component.html
+++ b/src/app/layout/calculator/concession/concession.component.html
@@ -16,7 +16,7 @@
       </label>
 
   <br/><br/>
-  <a [routerLink]="['/calculator']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block" role="button">
+  <a [routerLink]="['/calculator/actionplan']" [routerLinkActive]="['router-link-active']" class="btn btn-primary btn-lg btn-block" role="button">
     SHOW ME THE ACTION PLAN
   </a>
 
