--- a/src/app/layout/calculator/actionplan/actionplan.component.html
+++ b/src/app/layout/calculator/actionplan/actionplan.component.html
@@ -28,7 +28,7 @@
             <span class="actionplan-number">4</span>
             <div class="v-center">
                 <div class="actionplan__item-text">Receive independant financial review</div>
-                <a>Click here</a></div>
+                <a [routerLink]="['/map']" [routerLinkActive]="['router-link-active']">Click here</a></div>
         </div>
     </div>
 
