--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -22,8 +22,35 @@
   </div>
 
 
-  <div class="col-lg-9" style="background-size:cover; background-image: url(../assets/images/map.png)">
+  <div onclick="alert(1)" class="col-lg-9" style="color: black !important; background-size:cover; background-image: url(../assets/images/map.png)">
+    <div style="height:100%; width: 20%; background-color: white !important; color: black !important">
+      
+      <img src="" />
 
+      <p style="color: blue !important">
+        Donald Gladstone
+      </p>
+
+      <p style="color: grey !important">
+
+        A-Z Finance
+      </p>
+
+      <p>
+        235 Nicholson st <br/>
+        Carlton, VIC  3053.
+
+      </p>
+
+
+      <p>
+        Ph: (03) 8266 1161
+
+      </p>
+
+
+      
+    </div>
   </div>
 
 
